--- a/week2/solution/responsive/style.css
+++ b/week2/solution/responsive/style.css
@@ -1,24 +1,25 @@
 body {
     margin: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 div {
     width: 20rem;
     height: 10rem;
     background: #86ade8;
+    margin: 1rem 2rem;
 }
 
-
-@media screen and (max-width: 768px) {
+/* @media screen and (min-width: 768px) {
     
-}
+} */
 
-@media screen and (768px < width < 1280px) {
+/* @media screen and (768px < width < 1280px) {
     body {
         flex-direction: row;
     }
-}
+} */
