--- a/week2/demo/style.css
+++ b/week2/demo/style.css
@@ -4,26 +4,69 @@
 
 body {
     margin: 0;
-    width: 100vw;
-    height: 100vh;
-    padding: 10rem;
+    width: 95vw;
+    height: 95vh;
 }
 
-
-.grid-container {
+.container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 2rem;
-    column-gap: 2rem;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 3rem;
+    column-gap: 3rem;
 }
 
 .elem {
-    background-color: rgb(29, 189, 189);
-    margin: 2px;
-    height: 6rem;
+    min-width: 10rem;
+    height: 10rem;
+    background-color: aquamarine;
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
-#col-2 {
-    grid-column: 1/3;
+/* .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
 }
+
+.left-col {
+    flex: 1;
+    height: 100%;
+}
+
+.main-col {
+    flex: 4;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.up-row {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+}
+
+.down-row {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+}
+
+.main-left-col {
+    flex: 2;
+}
+
+.main-right-col {
+    flex: 1;
+}
+
+.down-row-left {
+    flex: 1;
+}
+
+.down-row-right {
+    flex: 2;
+} */
